k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-cd
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-cd
  template:
    metadata:
      labels:
        app: order-cd
    spec:
      containers:
        - name: order-cd
          image: 961341508965.dkr.ecr.ap-northeast-2.amazonaws.com/order-ci:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m" #최소요청 (0.1core)
            limits:
              cpu: "200m" #최대허용
        - name: monitoring-sidecar
          image: 961341508965.dkr.ecr.ap-northeast-2.amazonaws.com/monitoring-sidecar:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9100
          resources:
            requests:
              cpu: "50m"
            limits:
              cpu: "100m"

      imagePullSecrets:
        - name: ecr-registry-secret
