k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: order-cd-service
  namespace: default
spec:
  selector:
    app: order-cd   # Deployment 레이블과 같아야함
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
