k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-cd-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: alb
  rules:
    - host: dkgmp1k5bgam1.cloudfront.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
              service:
                name: order-cd-service   # Service 이름
                port:
                  number: 80
